--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
             <h1>Loading...</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Bede</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Bede</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
