--- a/www/index2.html
+++ b/www/index2.html
@@ -24,6 +24,16 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello</title>
+		<script>
+var x=0;
+function adding(){
+x=x+1;
+}
+function myFunction()
+{
+setTimeout(function(){alert("Your Score is "+x)},10000);
+}
+</script>
     </head>
     <body onload="myFunction()">
         <div class="app">
