--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,9 @@
     </head>
     <body>
         <div class="app">
+		<div class="iplogo">
      <img src="img/logo.png">
+	 </div>
 	 <br/>
 	 <br/>
 	 <div class="ip">
