--- a/www/index2.html
+++ b/www/index2.html
@@ -31,7 +31,7 @@ x=x+1;
 }
 function myFunction()
 {
-setTimeout(function(){alert("Your Score is "+x)},10000);
+setTimeout(function(){document.getElementById("log").innerHTML= "Your score is"+" "+ x;},10000);
 }
 </script>
     </head>
@@ -45,11 +45,17 @@ setTimeout(function(){alert("Your Score is "+x)},10000);
 ONMOUSEOVER="window.status='Replay'; return true">
 <img src="img/refresh.png" 
 width="115" height="115" border="0" /></a>
+	 <a href="index.html">
+	 <img src="img/menu.png">
+	 </a>
+	 <div id="log"></div>
         </div>
+		
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+		
     </body>
 </html>
