--- a/www/index.html
+++ b/www/index.html
@@ -20,33 +20,38 @@
 <html>
     <head>
 	<script>
-      function exitFromApp()
-       {
-            navigator.app.exitApp();
-       }
+	            function onLoad()
+            {
+                  document.addEventListener("deviceready", onDeviceReady, true);
+            }
+
+            function exitFromApp()
+             {
+                navigator.app.exitApp();
+             }
 	</script>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello</title>
+        <title>Button Challenge</title>
     </head>
-    <body>
-        <div class="app">
-		<div class="iplogo">
-     <img src="img/logo.png">
-	 </div>
+    <body onload="onLoad();">
+        <div id="app">
+	<div id="center">	
+     <img src="img/logo.png" /> </div>
 	 <br/>
 	 <br/>
-	 <div class="ip">
-	 <a href="index2.html">
+	 <div id="ip">
+		 <a href="index2.html">
 	 <img src="img/NewGame.png">
 	 </a>
-	 <br/>
-	 <br/>
+	 
 	 </div>
-	 <div class="ip2">
-	 <input type="image" onclick="exitFromApp()" src="img/exit.png" align="middle"/>
+	 <div id="ip2">
+
+	 <img src="img/exit.png" onclick="exitFromApp()">
+
 	 </div
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
@@ -54,5 +59,5 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-    </body>
+   </div> </body>
 </html>
