--- a/www/index2.html
+++ b/www/index2.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <!--
     Licensed to the Apache Software Foundation (ASF) under one
@@ -18,7 +21,7 @@
     under the License.
 -->
 <html>
-    <head>
+       <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
@@ -35,27 +38,36 @@ setTimeout(function(){document.getElementById("log").innerHTML= "Your score is"+
 }
 </script>
     </head>
-    <body onload="myFunction()">
-        <div class="app">
-       <input type="image" onclick="adding()" src="img/download.jpg" align="middle"/>
+        <body onload="myFunction()">
+ 
+        <div id="app">
+		
+		<div id="log"> </div>
+		
+	<div id="center">	
+        
+       <input type="image" onclick="adding()" src="img/download.png" align="middle"/> </div>
+	 <br/>
+	 <br/>
+	 <div id="ip">
+ <a href="index.html">
+	 <img src="img/menu.png" width="120" height="123">
+	 </a>
+	 
+	 </div>
+	 <div id="ip2">
 
-<br/>
-
-<a href="javascript:document.location.reload();"
+	 <a href="javascript:document.location.reload();"
 ONMOUSEOVER="window.status='Replay'; return true">
 <img src="img/refresh.png" 
 width="115" height="115" border="0" /></a>
-	 <a href="index.html">
-	 <img src="img/menu.png">
-	 </a>
-	 <div id="log"></div>
+
+	 </div
         </div>
-		
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
-		
-    </body>
+   </div> </body>
 </html>
