--- a/www/index2.html
+++ b/www/index2.html
@@ -51,7 +51,7 @@ setTimeout(function(){document.getElementById("log").innerHTML= "Your score is"+
 	 <br/>
 	 <div id="ip">
  <a href="index.html">
-	 <img src="img/menu.png" width="120" height="123">
+	 <img src="img/menu.png" width="120" height="120"/>
 	 </a>
 	 
 	 </div>
